# Trading_Simulator

./: .gitignore  README.md  pyproject.toml  啟動網頁.bat  更新資料.bat
src/: config.py
src/data_pipeline/: build_bars.py  downloader.py  prepare_history.py  shioaji_loader.py
src/replay/: engine.py
src/server/: app.py  sessions.py
tests/: test_build_bars.py  test_engine.py  test_sessions.py
web/: index.html  main.js
